# orchespy

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
doc/source/: conf.py  index.rst  installation.rst  notices.rst  overview.rst  userguide.rst
doc/source/reference/: index.rst  orchespy.decorator.rst  orchespy.devicetype.CUDAGPU.rst  orchespy.devicetype.Host.rst  orchespy.devicetype.VE.rst  orchespy.devicetype.rst  orchespy.transfer.rst
doc/source/usage/: basic.rst  decoration.rst  function.rst  index.rst
examples/: gpu_to_gpu.py  gpu_to_gpu_content.py  gpu_to_host.py  gpu_to_host_content.py  gpu_to_ve.py  gpu_to_ve_content.py  host_to_gpu.py  host_to_gpu_content.py  host_to_host.py  host_to_host_content.py  host_to_ve.py  host_to_ve_content.py  sum_gpu.py  sum_ve.py  sum_ve2.py  ve_to_gpu.py  ve_to_gpu_content.py  ve_to_host.py  ve_to_host_content.py  ve_to_ve.py  ve_to_ve_content.py
orchespy/: __init__.py  decorator.py  numpy.py  transfer.py
orchespy/devicetype/: __init__.py  base.py  cuda.py  find_device_class.py  host.py  ve.py
orchespy/devicetype/_transfer/: cunlc.pyx
tests/device_tests/: test_device.py  test_device_args.py  test_device_args_numpy_module.py  test_device_kwargs.py
tests/outer_api_error/: HOWTO.txt  outer_api_error.py  override_build.sh  override_cuda_memcpy.c  override_veo_memcpy.c
tests/transfer_array_tests/: test_transfer_array.py  test_transfer_array_huge.py  test_transfer_array_mem_on_host.py  test_transfer_array_mock.py  test_transfer_array_slice.py
