[metadata]
name = orchespy
version = 0.1.0b1
description = Device-independent library for NumPy programs
long_description = file:README.md
long_description_content_type = text/markdown
license = BSD 3-Clause
url = https://github.com/SX-Aurora/orchespy/
author = NEC
author_email = dev-nlcpy@sxarr.jp.nec.com

[options]
packages = find:

[options.package_data]
* = *.so

[options.packages.find]
exclude = tests
